# VideoNoire

./: CMakeLists.txt  LICENSE  README.md
src/: ClipItem.h  GstPreviewEngine.cpp  GstPreviewEngine.h  MainWindow.cpp  MainWindow.h  PreviewEngine.h  SourceListWidget.cpp  SourceListWidget.h  TimelineWidget.cpp  TimelineWidget.h  VideoExporter.cpp  VideoExporter.h
